Mon Feb 15 1999		Michael Hanni <mhanni@sprintmail.com>

	* Added IRIX to target.make as requested.

Mon Feb 15  8:48:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* aggregate.make: Strip space from name variable before use.
	* application.make: ditto
	* bundle.make: ditto
	* documentation.make: ditto
	* library.make: ditto
	* objc.make: ditto
	* service.make: ditto
	* test-application.make: ditto
	* test-library.make: ditto
	* test-tool.make: ditto
	* tool.make: ditto

Mon Feb  8 08:24:39 1999  Masatake Yamato  <masata-y@is.aist-nara.ac.jp>

        * ld_lib_path.csh: Rename additional_library_paths to
	additional_lib_paths.  It was too long for solaris2. 

1999-02-01  Adam Fedor  <fedor@gnu.org>

	* target.make: Add openbsd target (Patch from Michael Hanni
	<michael@zaft.state.gov>).
	Add Irix support.
	(SHARED_LIB_LINK_CMD): Add /usr/lib/c++rt0.o to *BSD commands.

Thu Jan 28 10:20:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

        * target.make: use '-lm' for freebsd and osf

Thu Jan  7 16:16:36 1999  Adam Fedor  <fedor@ultra.doc.com>

	* brain.make: Add support for xgps library.

Thu Jan  7 18:00:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* GNUstep.sh.in: Run make_services to rebuild caches.
        * GNUstep.csh.in: ditto

Sat Jan  2 12:26:20 1999  Adam Fedor  <fedor@ultra.doc.com>

	* configure.in: Check for DPS/dpsNXargs.h header.

Wed Dec 30 15:08:14 1998  Adam Fedor  <fedor@doc.com>

	* target.make (TARGET_SYSTEM_LIBS): Add FreeBSD specific libs. Use
 	$(objc_threaded) when adding thread lib to Solaris.

Mon Dec 21 11:04:45 1998  Matthias Klose  <doko@cs.tu-berlin.de>

        * common.make: New macros MAJOR_VERSION (0), MINOR_VERSION (5),
          SUBMINOR_VERSION (0) forming VERSION.
        * library.make: internal-uninstall-lib: rm SONAME_LIBRARY_FILE.
          Rename VERSION_MAJOR_LIBRARY_FILE to SONAME_LIBRARY_FILE.
          New macro SOVERSION.