@@ -1,3 +1,9 @@
+1999-02-14  Scott Christley  <scottc@net-community.com>
+
+	* ld_lib_path.sh (DYLD_LIBRARY_PATH, LD_LIBRARY_PATH): Add the tool
+	library path.
+	* ld_lib_patch.csh (DYLD_LIBRARY_PATH, LD_LIBRARY_PATH): Likewise.
+
 Mon Feb 15 1999		Michael Hanni <mhanni@sprintmail.com>
 
 	* Added IRIX to target.make as requested.
